fix z-indexing issue.

--- a/styles.css
+++ b/styles.css
@@ -167,6 +167,7 @@ ul.zone-list li {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1000; /* ensure above card tooltips */
 }
 
 .option-prompt ul {
